--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,16 @@
 			<artifactId>jaxb-runtime</artifactId>
 			<version>2.3.3-b01</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hildan.fxgson</groupId>
+			<artifactId>fx-gson</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.8.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
